# CanWeeb

./: .gitignore  Cargo.toml  README.md
CmdLib/: Cargo.toml  QUICKSTART.md  README.md
CmdLib/examples/: real_gpio_pwm.rs  standalone_drive.rs
CmdLib/spec/: examples.md  gpio.md  messaging.md  node-management.md  overview.md  robot-presets.md  standalone.md
CmdLib/src/: arduino.rs  backend.rs  command.rs  error.rs  lib.rs  macros.rs  prelude.rs  pwm.rs  real_backend.rs  remote_exec.rs  runtime.rs  types.rs
CmdLib/tests/: arduino_compat.rs  macro_smoke.rs
config/: child.toml  example.toml  parent.toml
docs/: PROTOCOL.md  SETUP_RPI_UBUNTU.md
examples/: README.md
examples/child-serial-daemon/: Cargo.toml
examples/child-serial-daemon/src/: main.rs
examples/parent-ui/: index.html
src/: config.rs  main.rs  mesh.rs  protocol.rs  storage.rs  web.rs  wifi.rs
