[package]
name = "canweeb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json", "macros", "ws"] }
base64 = "0.22"
bincode = "1.3"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
dashmap = "5.5"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
