[package]
name = "canweeb_cmdlib"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Standalone Raspberry Pi robotics control library for Rust"

[lib]
name = "canweeb_cmdlib"
path = "src/lib.rs"

[dependencies]
i2cdev = "0.6"
num-traits = "0.2"
once_cell = "1.19"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.8"
spidev = "0.6"
thiserror = "2.0"
uuid = { version = "1.8", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1.0"
